<resources>
    <string name="app_name">مدیتیشن</string>

    <string name="slide_1_desc">مدیتیشن با روشی بسیار آسان</string>
    <string name="slide_2_desc">برروی چیزهایی که مهم است تمرکز کنید</string>
    <string name="slide_3_desc">با روزی 10 دقیقه یاد بگیرید</string>

    <string name="create_account">ایجاد حساب</string>
    <string name="log_in">قبلا عضو بوده اید؟ وارد شوید</string>

    <string name="sign_up_desc">ایجاد حساب از طریق ایمیل</string>
    <string name="sign_up_btn">شروع کن</string>

    <string name="login_desc">خوش آمدید</string>
    <string name="login_btn">ورود</string>

    <string name="password_character">بین 4 تا 10 کاراکتر</string>
    <string name="forget_password">رمز عبور را فراموش کرده اید؟</string>

    <string name="home">خانه</string>
    <string name="logout">خروج از حساب</string>

    <string name="drawer_open">drawer opened</string>
    <string name="drawer_close">drawer closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
