<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    tools:context=".activities.WelcomeActivity">
    <com.blacksite.meditation.view.MyFarsiTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/slide_title"

        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/title_color"
        android:text="@string/app_name"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_below="@+id/view_pager"
        android:layout_marginBottom="@dimen/dots_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal"></LinearLayout>

    <!--<com.blacksite.meditation.view.MyTextView
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_create_account_height"
        android:layout_above="@+id/log_in"
        android:background="@drawable/btn_create_account_background"
        android:textColor="@color/text_color"
        android:gravity="center_horizontal"
        android:textSize="@dimen/btn_create_account"
        android:text="@string/create_account"/>-->
    <RelativeLayout
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_create_account_height"
        android:layout_above="@+id/log_in"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/btn_3d_create_account_background">
        <com.blacksite.meditation.view.MyFarsiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/btn_create_account"
            android:textColor="@color/text_color"/>
    </RelativeLayout>
    <com.blacksite.meditation.view.MyFarsiTextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:background="@drawable/clickable_textview_background"
        android:text="@string/log_in"/>

</RelativeLayout>
