<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.blacksite.meditation.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.blacksite.meditation.view.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/login_desc"/>
        <EditText android:id="@+id/input_email_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_create_account_height"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="Email Address"
            android:textCursorDrawable="@null"
            android:layout_marginBottom="10dp"
            android:background="@drawable/form_background"/>
        <EditText android:id="@+id/input_password_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_create_account_height"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="Password"
            android:textCursorDrawable="@null"
            android:layout_marginBottom="0dp"
            android:background="@drawable/form_background"/>
        <RelativeLayout
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_create_account_height"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/btn_3d_login_background">
            <com.blacksite.meditation.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/btn_create_account"
                android:textColor="@color/text_color"/>

            <!--<ImageView
                android:layout_width="@dimen/btn_create_account"
                android:layout_height="@dimen/btn_create_account"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/forward_w"/>-->
        </RelativeLayout>
        <com.blacksite.meditation.view.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:clickable="true"
            android:background="@drawable/clickable_textview_background"
            android:text="@string/forget_password"/>
    </LinearLayout>
</ScrollView>
