<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.blacksite.meditation.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.blacksite.meditation.view.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up_desc"/>
        <!--  Name Label -->
        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/form_background">

        </android.support.design.widget.TextInputLayout>-->
        <EditText android:id="@+id/input_fname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_create_account_height"
            android:inputType="textCapWords"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="First Name"
            android:layout_marginBottom="10dp"
            android:background="@drawable/form_background"/>
        <EditText android:id="@+id/input_lname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_create_account_height"
            android:inputType="textCapWords"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Last Name"
            android:background="@drawable/form_background"/>
        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_create_account_height"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="Email Address"
            android:layout_marginBottom="10dp"
            android:background="@drawable/form_background"/>
        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_create_account_height"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="Password"
            android:layout_marginBottom="0dp"
            android:background="@drawable/form_background"/>
            <com.blacksite.meditation.view.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:gravity="right"
                android:text="@string/password_character"/>
        <RelativeLayout
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_create_account_height"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/btn_3d_create_account_background">
            <com.blacksite.meditation.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_btn"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/btn_create_account"
                android:textColor="@color/text_color"/>
            <!--<com.blacksite.meditation.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/text_color"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text=">"/>-->
            <ImageView
                android:layout_width="@dimen/btn_create_account"
                android:layout_height="@dimen/btn_create_account"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/forward_w"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
